<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.ui.screen.map.AddBroadcastFragment">

    <Spinner
        android:id="@+id/courseSpinner"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="36dp"
        android:visibility="visible"
        android:entries="@array/StringCourses"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="31dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="30dp"
        android:layout_toStartOf="@+id/addBtn"
        android:text="@string/cancelBtn" />

    <EditText
        android:id="@+id/descriptionEdittext"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/courseSpinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp" />

    <!--- <EditText
       android:id="@+id/selectDateEditText"
       android:hint="@string/select_date"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/descriptionEdittext"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:layout_centerHorizontal="true"
       />

    <EditText
        android:id="@+id/selectStartTimeEditText"
        android:hint="@string/select_time_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectDateEditText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:id="@+id/selectEndTimeEditText"
        android:hint="@string/select_time_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/selectStartTimeEditText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerHorizontal="true"
        />-->
</RelativeLayout>

    <!--Fragment to add broadcast when user click broadcast
        AUTHOR: Pontus Nellgård-->