...
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_mapScreenFragment"
            app:destination="@id/mapScreenFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapScreenFragment"
        android:name="cse.dit012.lost.android.ui.screen.map.MapScreenFragment"
        android:label="fragment_map_screen"
        tools:layout="@layout/fragment_map_screen">
        <action
            android:id="@+id/action_mapScreenFragment_to_add_broadcast_fragment"
            app:destination="@id/add_broadcast_fragment"
            app:popUpTo="@id/add_broadcast_fragment" />
        <action
            android:id="@+id/action_mapScreenFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
...
