<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".android.ui.screen.map.MapScreenFragment">

    <fragment
        android:id="@+id/map"
        android:name="cse.dit012.lost.android.ui.map.LostMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/fragment_map_infowindow" />

    <Button
        android:id="@+id/broadcast_btn"
        style="@style/broadCastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="25dp"
        android:text="@string/broadcast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/sign_out_btn"
        style="@style/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="25dp"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <AutoCompleteTextView
        android:id="@+id/course_filter_textbox"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:completionThreshold="1"
        android:hint="@string/enter_course_to_filter"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

    <!--Fragment for everything displayed on the main map screen
        Author: Benjamin Sannholm, Bashar Oumari -->